Prevent image cutoff

--- a/src/sass/about/intro.scss
+++ b/src/sass/about/intro.scss
@@ -5,17 +5,6 @@
   margin-top: 1em;
   place-items: center;
 
-  .image {
-    width: 100%;
-    height: auto;
-    max-height: 80dvh;
-    display: flex;
-    overflow: hidden;
-    border-radius: 8px;
-    justify-content: center;
-    align-items: center;
-  }
-
   &-text {
     display: flex;
     flex-direction: column;
